@@ -69,7 +69,7 @@ register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qadd', [])
 register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qannotate', ['qann', 'qblame'])
 register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qbranch', [])
 register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qbrowse', ['qbw'])
-register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qbzr', [])
+register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qmain', [])
 register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qcat', [])
 register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qcommit', ['qci'])
 register_lazy_command('bzrlib.plugins.qbzr.lib.commands', 'cmd_qconfig', ['qconfigure'])
